# crypto-stock-mlops-pipeline

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci-pipeline.yml  deploy-model.yml  drift-detection.yml  train-model.yml
configs/: best_params.json  training_config.yaml
data/: .gitignore  features.dvc  processed.dvc
data/predictions/: latest_forecasts.csv.dvc
notebooks/: exploratory_analysis.ipynb
src/api/: check_models_for_test.py  main.py  model_manager.py  run.py  schemas.py
src/data/: data_processor.py  data_validation.py  fetch_data.py  preprocess.py
src/features/: build_features.py
src/models/: hybrid_model.py  lstm_model.py  train_model.py  xgboost_model.py
src/monitoring/: drift_detection.py  model_performance.py
src/training/: check_champion.py  evaluate.py  promote_model.py  train.py  tune.py
src/utils/: config_utils.py
tests/integration/: test_api_request.py  test_pipeline.py
tests/model_tests/: test_model_behavior.py
tests/unit/: test_build_features.py  test_config_utils.py  test_data_processor.py  test_data_validation.py  test_evaluate.py  test_fetch_data.py  test_hybrid_model.py  test_initial.py  test_lstm_model.py  test_preprocessing.py  test_xgboost_model.py
